# Wordpress-IaC

./: .gitignore  README.md  pyproject.toml
Terraform/: .env.example  main.tf  provider.tf  variables.tf
Terraform/modules/alb/: main.tf  variables.tf
Terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
Terraform/modules/sg/: main.tf  outputs.tf
Terraform/modules/vpc/: main.tf
wordpress_iac/defaults/: main.yml
wordpress_iac/handlers/: main.yml
wordpress_iac/meta/: main.yml
wordpress_iac/molecule/default/: converge.yml  molecule.yml
wordpress_iac/tasks/: main.yml
wordpress_iac/tests/: test.yml
wordpress_iac/vars/: main.yml
